Changelog v1.5.0 to v1.5.1
--------------------------
-Add support for ExpeditInvaders output
-Fix Checkbox Mixer, make checkbox size dependent on output


Changelog v1.4.1 to v1.5.0
--------------------------
-Add new Help Tab, display a short help how to use PixelController
-Add Zoom Effect, add Zoom options (zoom in, zoom out, vertical, horizontal)
-Add Textwriter option (PingPong scrolling, left scrolling)
-Add new Minimum and Maximum Mixer
-Add new keyboard shortcut to select tabs (arrow keys)
-Add new GUI option to save screenshot of all visuals
-Add missing option 'snake cabling' and 'mapping' for TPM2.Net device
-Add missing option 'snake cabling' and 'mapping' for Artnet/E1.31 devices
-Add multipanel support for Artnet/E1.31 output
-Fix use colorset name (instead of index) if a preset is saved
-Fix colorscroll GUI element initialization
-Fix Effect Rotate90 for non square output
-Fix Effect BeatHorizShift for exotic resolutions
-Fix Effect Rotozoom for exotic resolutions
-Fix Effect Texture deform for exotic resolutions
-Fix Mixer Checkbox for exotic resolutions
-Fix PixConCli JMX Query  
-Fix ColorSet, rarely visible smoothness bug
-Cleanup GUI, make grouping of controls more strict
-Reduce filesize of distribution file, remove unneeded files
-Remove support for Adavision product - does not exist anymore
-Update PixConCli, improve message handling
-Update Fire Generator, remove visible random pixels
-Update Config example files 
-Update PixelInvaders firmware, use the TPM2Net protocol to send data 
   Testcase: 2 PixelInvader Panels, ColorScroll Generator, no sound update
   Framerate old fw: 35fps, Framerate new fw: 140fps -> 400% faster!
   

Changelog v1.4.0 to v1.4.1
--------------------------
-Fix update TPM2.net implementation (add total packet bytes)
-Fix cleanup unused files
-Fix OSC listener, increased buffer size to 50kb so large image content can be sent via OSC
-Fix OSC address, expected: "/NAME" was: "NAME"