@@ -30,7 +30,6 @@ Roadmap PixelController
 -Game of life generator
 -Matrix device specific settings (bpp, cabling, mapping etc) should be inside the MatrixData class.
 -Merge code of the output package, alot of duplicate code 
--Fader effect if a preset is loaded, freeze current Buffer and fade into new content 
 -Make fader time configurable
 
 
