@@ -81,6 +81,11 @@ startup.in.randommode=false
 #startup.load.preset.nr=1
 
 #=========================
+#Preset fader time, if a new preset is loaded it gets crossfaded to the new content
+#=========================
+#preset.loading.fade.time=500
+
+#=========================
 #use audio as input setting (true)
 #or just regular fps (false)
 #=========================
