@@ -1,6 +1,7 @@
 Changelog v1.5.0 to v1.5.1
 --------------------------
 -Add support for ExpeditInvaders output
+-Add Fader effect if a preset is loaded, freeze current buffer and fade into new content 
 -Fix Checkbox Mixer, make checkbox size dependent on output
 
 
